# mcmod-parser

./: .gitignore  LICENSE  README.md  cli.spec  pyproject.toml
.github/workflows/: pypi.yml
src/mcmod_parser/: __init__.py  cli.py  jar_reader.py  models.py  scanner.py
src/mcmod_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcmod_parser/parsers/: __init__.py  base.py  fabric.py  forge.py  quilt.py
tests/: __init__.py  test_cli.py  test_fabric.py  test_forge.py  test_jar_reader.py  test_models.py  test_quilt.py  test_scanner.py
